# gix

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  git.rs  main.rs  profile.rs  version.rs
