[package]
name = "gix"
version = "1.0.0"
edition = "2021"
description = "A powerful Git profile manager for switching between SSH keys and user configurations"
repository = "https://github.com/elmanci2/gix"
license = "MIT"
authors = ["elmanci2"]
keywords = ["git", "ssh", "profile", "switch", "identity"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
directories = "5.0"
anyhow = "1.0"
chrono = "0.4"
semver = "1.0"

[[bin]]
name = "gix"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
